# starbucks-logo-segmentation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_FIX.md  LESSONS_LEARNED.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github-examples/: ci-modern.yml
.github/workflows/: python-app.yml
src/: coreml_convert.py  coreml_test_wrapper.py  main_test.py  main_train.py
src/data/: __init__.py
src/mobile_seg/: __init__.py  dataset.py  loss.py  params.py
src/mobile_seg/modules/: net.py  test_unet.py
src/model/: __init__.py
src/mylib/: params.py
src/mylib/albumentations/augmentations/: transforms.py
src/mylib/gcp/: util.py
src/mylib/lgb/: metrics.py  null_imp.py  util.py
src/mylib/lgb/callbacks/: model_extraction.py
src/mylib/numpy/: functional.py
src/mylib/pandas/: cache.py  corr.py  util.py
src/mylib/pytorch_lightning/: base_module.py  logging.py
src/mylib/sklearn/: split.py
src/mylib/sklearn/fe/: pair_count_encoder.py  target_encoder.py
src/mylib/torch/: functional.py
src/mylib/torch/data/: dataset.py
src/mylib/torch/ensemble/: ema.py  swa.py
src/mylib/torch/fe/: bert_emb.py
src/mylib/torch/nn/: functional.py  mish_init.py
src/mylib/torch/nn/losses/: regression.py
src/mylib/torch/nn/modules/: dense.py  frelu.py  gauss_rank_transform.py  graph_norm.py  mlp.py  pair_norm.py  se_layer.py
src/mylib/torch/optim/: sched.py
src/mylib/torch/optim/gc/: SGD.py
src/mylib/utils/: plt.py  text.py
src/params/: config.json
src/starbucks_logo_seg/: __init__.py  cli.py
tests/: __init__.py  test_basic.py  test_config.py  test_imports.py  test_package.py
