[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starbucks-logo-segmentation"
version = "1.0.0"
description = "🌟 Ultra-modern Starbucks logo segmentation using deep learning with MobileNetV2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Starbucks Logo Seg Team" }
]
keywords = [
    "deep-learning",
    "computer-vision",
    "semantic-segmentation",
    "pytorch",
    "pytorch-lightning",
    "starbucks",
    "logo-detection",
    "mobilenet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytorch-lightning>=1.0.8",
    "albumentations>=0.5.2",
    "opencv-python>=4.4.0",
    "numpy>=1.19.4",
    "pandas>=1.1.4",
    "pillow>=8.0.1",
    "matplotlib>=3.3.3",
    "scikit-image>=0.17.2",
    "scikit-learn>=0.23.2",
    "tqdm>=4.54.0",
    "pyyaml>=5.3.1",
    "imageio>=2.9.0",
    "imgviz>=1.2.0",
    "timm>=0.5.4",
    "omegaconf",
    "rich>=13.0.0",
    "click>=8.0.0",
    "torch-optimizer>=0.0.1a17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
coreml = [
    "coremltools>=4.0",
    "onnx>=1.8.0",
    "onnx-coreml>=1.3",
    "onnxruntime>=1.5.2",
]

[project.urls]
Homepage = "https://github.com/umitkacar/starbucks-logo-segmentation"
Repository = "https://github.com/umitkacar/starbucks-logo-segmentation"
Documentation = "https://github.com/umitkacar/starbucks-logo-segmentation#readme"
"Bug Tracker" = "https://github.com/umitkacar/starbucks-logo-segmentation/issues"

[project.scripts]
starbucks-train = "starbucks_logo_seg.cli:train"
starbucks-test = "starbucks_logo_seg.cli:test"
starbucks-predict = "starbucks_logo_seg.cli:predict"

[tool.hatch.build.targets.wheel]
packages = ["src/starbucks_logo_seg"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/starbucks_logo_seg {args:tests}"
lint = "ruff check src/"
format = "black src/"

[tool.hatch.envs.dev]
dependencies = [
    "jupyter",
    "ipython",
    "tensorboard",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
