[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starbucks-logo-segmentation"
version = "1.0.0"
description = "🌟 Ultra-modern Starbucks logo segmentation using deep learning with MobileNetV2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Starbucks Logo Seg Team" }
]
keywords = [
    "deep-learning",
    "computer-vision",
    "semantic-segmentation",
    "pytorch",
    "pytorch-lightning",
    "starbucks",
    "logo-detection",
    "mobilenet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytorch-lightning>=1.0.8",
    "albumentations>=0.5.2",
    "opencv-python>=4.4.0",
    "numpy>=1.19.4",
    "pandas>=1.1.4",
    "pillow>=8.0.1",
    "matplotlib>=3.3.3",
    "scikit-image>=0.17.2",
    "scikit-learn>=0.23.2",
    "tqdm>=4.54.0",
    "pyyaml>=5.3.1",
    "imageio>=2.9.0",
    "imgviz>=1.2.0",
    "timm>=0.5.4",
    "omegaconf",
    "rich>=13.0.0",
    "click>=8.0.0",
    "torch-optimizer>=0.0.1a17",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",  # Parallel testing
    "pytest-timeout>=2.1.0",  # Test timeouts
    "pytest-mock>=3.10.0",  # Mocking support
    "coverage[toml]>=7.0.0",  # Coverage with TOML support

    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",  # Security linting
    "safety>=2.0.0",  # Dependency security check

    # Pre-commit
    "pre-commit>=3.0.0",

    # Type stubs
    "types-PyYAML",
    "types-setuptools",
    "types-requests",
]

coreml = [
    "coremltools>=4.0",
    "onnx>=1.8.0",
    "onnx-coreml>=1.3",
    "onnxruntime>=1.5.2",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

all = [
    "starbucks-logo-segmentation[dev,coreml,docs]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/starbucks-logo-segmentation"
Repository = "https://github.com/umitkacar/starbucks-logo-segmentation"
Documentation = "https://github.com/umitkacar/starbucks-logo-segmentation#readme"
"Bug Tracker" = "https://github.com/umitkacar/starbucks-logo-segmentation/issues"
Changelog = "https://github.com/umitkacar/starbucks-logo-segmentation/blob/main/CHANGELOG.md"

[project.scripts]
starbucks-train = "starbucks_logo_seg.cli:train"
starbucks-test = "starbucks_logo_seg.cli:test"
starbucks-predict = "starbucks_logo_seg.cli:predict"

# ============================================================================
# HATCH Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/starbucks_logo_seg"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/starbucks_logo_seg --cov-report=html --cov-report=term {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
cov = "pytest --cov=src/starbucks_logo_seg --cov-report=html --cov-report=xml --cov-report=term-missing {args:tests}"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format = "black src/ tests/"
format-check = "black --check src/ tests/"
type-check = "mypy src/"
security = "bandit -r src/ -ll"
all-checks = [
    "format-check",
    "lint",
    "type-check",
    "test-cov",
]

[tool.hatch.envs.dev]
dependencies = [
    "jupyter",
    "ipython",
    "tensorboard",
    "ipdb",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "python -m http.server --directory docs/_build/html"

# ============================================================================
# BLACK Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# RUFF Configuration (Ultra-Strict)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "NPY",   # NumPy-specific rules
    "RUF",   # Ruff-specific rules
    "PERF",  # Perflint
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PD901",   # avoid using df as variable name
    "TRY003",  # avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402", "EXE002"]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused function args allowed in tests
    "FBT",    # boolean trap allowed in tests
    "PLR2004", # magic values allowed in tests
    "S311",   # standard pseudo-random generators allowed in tests
    "ANN201",  # missing return type in tests is ok
    "PTH123",  # open() vs Path.open() in tests is ok
    "PLC0415", # imports in tests can be inside functions
]
# Legacy code - more lenient rules (comprehensive ignores)
"src/mobile_seg/**/*.py" = ["ANN", "ARG", "ERA001", "T201", "PTH", "N", "E402", "EXE002", "A", "PLR", "INP001", "UP008", "RUF", "RET504"]
"src/mylib/**/*.py" = ["ANN", "ARG", "ERA001", "T201", "PTH", "N", "C408", "SIM", "PLR", "UP", "A", "COM", "RUF", "RET504", "EXE002", "NPY", "EM", "PD", "FBT", "B", "TRY", "S", "E", "SLF", "PLW", "INP001"]
"src/coreml*.py" = ["ANN", "ERA001", "T201", "PTH", "EXE002", "UP008", "RET504"]
"src/data/__init__.py" = ["ANN", "ARG", "ERA001", "N812", "C416", "EXE002"]
"src/model/__init__.py" = ["ANN", "ARG", "N806", "ERA001", "TRY002"]
"src/main_*.py" = ["ANN", "FBT", "RUF059", "PTH", "EXE002", "RET504", "BLE001", "EM102", "G004"]
# Modern CLI - allow lazy imports and broad exception handling for UX
"src/starbucks_logo_seg/cli.py" = ["PLC0415", "BLE001"]

[tool.ruff.lint.isort]
known-first-party = ["starbucks_logo_seg", "mobile_seg", "mylib"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# ============================================================================
# MYPY Configuration (Strict Mode)
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Strictness flags (gradually enable)
disallow_untyped_defs = false  # Enable gradually
disallow_any_generics = false  # Enable gradually
disallow_subclassing_any = false

# Import discovery
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = false

# Output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "albumentations.*",
    "cv2.*",
    "imgviz.*",
    "timm.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/starbucks_logo_seg",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",  # Set to desired coverage threshold
    "--maxfail=3",  # Stop after 3 failures
    "--durations=10",  # Show 10 slowest tests
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/distutils/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT Configuration (Security)
# ============================================================================

[tool.bandit]
targets = ["src"]
exclude_dirs = ["/tests"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]
